hphp/test/zend/bad/ext/dom/tests/DOMCharacterData_deleteData_error_002.php
<?php
$document = new DOMDocument;
$root = $document->createElement('root');
$document->appendChild($root);

$cdata = $document->createCDATASection('test');
$root->appendChild($cdata);
$cdata->deleteData(5, 1);
?>
